--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             text-align: center;
             color: white;
             font-weight: bold;
+            font-size: 8px; /* Tamanho da fonte da porcentagem reduzido */
             line-height: 12px;
         }
         .progress-label {
@@ -39,13 +40,10 @@
             color: #444;
         }
 
-        /* Cores vivas para as barras */
-        #year-progress { background-color: #4CAF50; } /* Verde */
-        #semester-progress { background-color: #2196F3; } /* Azul */
-        #quarter-progress { background-color: #FF9800; } /* Laranja */
-        #month-progress { background-color: #FF5722; } /* Vermelho */
-        #week-progress { background-color: #9C27B0; } /* Roxo */
-        #day-progress { background-color: #00BCD4; } /* Ciano */
+        /* Cores agrupadas conforme sua solicitação */
+        #year-progress, #semester-progress { background-color: #4CAF50; } /* Tons de verde */
+        #quarter-progress, #month-progress { background-color: #FF5722; } /* Tons de laranja e vermelho */
+        #week-progress, #day-progress { background-color: #9C27B0; } /* Tons de roxo e azul */
     </style>
 </head>
 <body>
