--- a/index.html
+++ b/index.html
@@ -41,10 +41,15 @@
             color: #444;
         }
 
-        /* Cores semelhantes */
-        #year-progress, #semester-progress { background-color: #2196F3; } /* Azul claro */
-        #quarter-progress, #month-progress { background-color: #FF9800; } /* Laranja */
-        #week-progress, #day-progress { background-color: #4CAF50; } /* Verde */
+        /* Cores ajustadas, com tonalidades diferentes dentro de cada grupo */
+        #year-progress { background-color: #1E88E5; } /* Azul mais forte */
+        #semester-progress { background-color: #42A5F5; } /* Azul mais claro */
+        
+        #quarter-progress { background-color: #FF7043; } /* Laranja mais forte */
+        #month-progress { background-color: #FFCC80; } /* Laranja mais suave */
+        
+        #week-progress { background-color: #388E3C; } /* Verde mais escuro */
+        #day-progress { background-color: #66BB6A; } /* Verde mais claro */
     </style>
 </head>
 <body>
