--- a/index.html
+++ b/index.html
@@ -8,32 +8,33 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #f4f4f4; /* Fundo mais claro */
+            background-color: #f4f4f4; /* Fundo claro */
             color: #333;
-            padding: 20px;
+            padding: 15px; /* Menor espaço ao redor */
         }
         h2 {
             margin-top: 0;
             margin-bottom: 10px;
+            font-size: 18px; /* Título um pouco menor */
         }
         .progress-container {
             width: 100%;
             max-width: 230px; /* Largura mantida em 230px */
-            margin: 5px auto;
+            margin: 3px auto; /* Menor espaçamento entre as barras */
             background: #fff; /* Fundo branco */
             padding: 8px;
             border-radius: 8px;
             box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
         }
         .progress-bar {
-            height: 20px; /* Aumentando a altura das barras para 20px */
+            height: 20px; /* Aumentando a altura das barras */
             border-radius: 5px;
             position: relative;
             text-align: center;
             color: white;
             font-weight: bold;
-            font-size: 12px; /* Ajustando o tamanho da fonte para 12px */
-            line-height: 20px; /* Alinhamento da porcentagem no centro */
+            font-size: 12px; /* Tamanho da fonte ajustado */
+            line-height: 20px; /* Centraliza a porcentagem */
         }
         .progress-label {
             margin-bottom: 4px;
