--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             margin: 0;
         }
         h2 {
-            margin-top: 0;
-            margin-bottom: 10px;
-            font-size: 18px; /* Título um pouco menor */
+            margin-top: 5px; /* Diminui o espaço superior */
+            margin-bottom: 5px; /* Diminui o espaço inferior */
+            font-size: 18px; /* Tamanho do título ajustado */
         }
         .progress-container {
             width: 100%;
