--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             margin: 0;
         }
         h2 {
-            margin-top: 2px; /* Diminui o espaço superior para 2px */
-            margin-bottom: 2px; /* Diminui o espaço inferior para 2px */
+            margin-top: 5px; /* Diminui o espaço superior */
+            margin-bottom: 5px; /* Diminui o espaço inferior */
             font-size: 18px; /* Tamanho do título ajustado */
         }
         .progress-container {
