--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             margin: 0;
         }
         h2 {
-            margin-top: 5px; /* Diminui o espaço superior */
-            margin-bottom: 5px; /* Diminui o espaço inferior */
+            margin-top: 5px; /* Diminui o espaço superior para 5px */
+            margin-bottom: 5px; /* Diminui o espaço inferior para 5px */
             font-size: 18px; /* Tamanho do título ajustado */
         }
         .progress-container {
@@ -43,15 +43,15 @@
             color: #444;
         }
 
-        /* Cores ajustadas conforme a solicitação */
-        #year-progress { background-color: #8E24AA; } /* Roxo */
-        #semester-progress { background-color: #D32F2F; } /* Vermelho */
+        /* Cores ajustadas para um tom mais escuro */
+        #year-progress { background-color: #7B1FA2; } /* Roxo mais escuro */
+        #semester-progress { background-color: #C62828; } /* Vermelho mais escuro */
         
-        #quarter-progress { background-color: #FF9800; } /* Laranja */
-        #month-progress { background-color: #FFEB3B; } /* Amarelo */
+        #quarter-progress { background-color: #F57C00; } /* Laranja mais escuro */
+        #month-progress { background-color: #FBC02D; } /* Amarelo mais escuro */
         
-        #week-progress { background-color: #43A047; } /* Verde */
-        #day-progress { background-color: #1E88E5; } /* Azul */
+        #week-progress { background-color: #388E3C; } /* Verde mais escuro */
+        #day-progress { background-color: #1976D2; } /* Azul mais escuro */
     </style>
 </head>
 <body>
