--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         }
 
         /* Cores ajustadas para um tom mais escuro */
-        #year-progress { background-color: #7B1FA2; } /* Roxo mais escuro */
-        #semester-progress { background-color: #C62828; } /* Vermelho mais escuro */
+        #year-progress { background-color: #6A1B9A; } /* Roxo mais escuro */
+        #semester-progress { background-color: #D32F2F; } /* Vermelho mais escuro */
         
         #quarter-progress { background-color: #F57C00; } /* Laranja mais escuro */
         #month-progress { background-color: #FBC02D; } /* Amarelo mais escuro */
