--- a/index.html
+++ b/index.html
@@ -8,50 +8,48 @@
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            background-color: #f4f4f4; /* Fundo claro */
-            color: #333;
+            background-color: #222; /* Modo escuro */
+            color: #fff;
             padding: 0;
             margin: 0;
         }
         h2 {
-            margin-top: 5px; /* Diminui o espaço superior para 5px */
-            margin-bottom: 5px; /* Diminui o espaço inferior para 5px */
-            font-size: 18px; /* Tamanho do título ajustado */
+            margin-top: 5px;
+            margin-bottom: 5px;
+            font-size: 18px;
         }
         .progress-container {
             width: 100%;
-            max-width: 230px; /* Largura mantida em 230px */
-            margin: 3px auto; /* Menor espaçamento entre as barras */
-            background: #fff; /* Fundo branco */
-            padding: 8px;
+            max-width: 230px; /* Largura ajustada */
+            margin: 5px auto;
+            background: #333; /* Fundo escuro para as barras */
+            padding: 10px;
             border-radius: 8px;
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
         }
         .progress-bar {
-            height: 20px; /* Aumentando a altura das barras */
+            height: 18px; /* Ajustei a altura da barra */
             border-radius: 5px;
             position: relative;
             text-align: center;
             color: white;
             font-weight: bold;
-            font-size: 12px; /* Tamanho da fonte ajustado */
-            line-height: 20px; /* Centraliza a porcentagem */
+            font-size: 12px;
+            line-height: 18px; /* Para centralizar a porcentagem */
         }
         .progress-label {
-            margin-bottom: 4px;
+            margin-bottom: 5px;
             font-weight: bold;
-            color: #444;
+            color: #ccc; /* Cor clara para os labels */
         }
 
-        /* Cores ajustadas para um tom mais escuro */
-        #year-progress { background-color: #6A1B9A; } /* Roxo mais escuro */
-        #semester-progress { background-color: #D32F2F; } /* Vermelho mais escuro */
-        
-        #quarter-progress { background-color: #F57C00; } /* Laranja mais escuro */
-        #month-progress { background-color: #FBC02D; } /* Amarelo mais escuro */
-        
-        #week-progress { background-color: #388E3C; } /* Verde mais escuro */
-        #day-progress { background-color: #1976D2; } /* Azul mais escuro */
+        /* Cores ajustadas para contraste e legibilidade */
+        #year-progress { background-color: #7B1FA2; } /* Roxo escuro */
+        #semester-progress { background-color: #D32F2F; } /* Vermelho escuro */
+        #quarter-progress { background-color: #FF9800; } /* Laranja escuro */
+        #month-progress { background-color: #FBC02D; } /* Amarelo escuro */
+        #week-progress { background-color: #388E3C; } /* Verde escuro */
+        #day-progress { background-color: #1976D2; } /* Azul escuro */
     </style>
 </head>
 <body>
