--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Life Progress</title>
+    <title>Progress Tracker</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -51,11 +51,9 @@
         #month-progress { background-color: #FBC02D; }
         #week-progress { background-color: #388E3C; }
         #day-progress { background-color: #1976D2; }
-
     </style>
 </head>
 <body>
-    <h2>Life Progress</h2>
     <div class="progress-container">
         <div class="progress-label">Ano</div>
         <div class="progress-bar" id="year-progress">0%</div>
