--- a/index.html
+++ b/index.html
@@ -17,29 +17,30 @@
         .progress-container {
             width: 100%;
             max-width: 300px;
-            margin: 10px auto;
+            margin: 20px auto;
             background: #222;
             padding: 10px;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
             display: flex;
+            flex-direction: column;
             align-items: center;
-            justify-content: space-between;
         }
-        .progress-label {
+
+        .progress-title {
             font-weight: bold;
             color: #ffffff;
-            flex: 1;
-            text-align: left;
-            padding-left: 10px;
+            margin-bottom: 10px;
         }
+
         .progress-bar-container {
-            flex: 2;
+            width: 100%;
             background: #333;
             border-radius: 5px;
             height: 18px;
             overflow: hidden;
         }
+
         .progress-bar {
             height: 100%;
             border-radius: 5px;
@@ -62,37 +63,37 @@
 </head>
 <body>
     <div class="progress-container">
-        <div class="progress-label">Ano</div>
+        <div class="progress-title">Ano</div>
         <div class="progress-bar-container">
             <div class="progress-bar" id="year-progress">0%</div>
         </div>
     </div>
     <div class="progress-container">
-        <div class="progress-label">Semestre</div>
+        <div class="progress-title">Semestre</div>
         <div class="progress-bar-container">
             <div class="progress-bar" id="semester-progress">0%</div>
         </div>
     </div>
     <div class="progress-container">
-        <div class="progress-label">Trimestre</div>
+        <div class="progress-title">Trimestre</div>
         <div class="progress-bar-container">
             <div class="progress-bar" id="quarter-progress">0%</div>
         </div>
     </div>
     <div class="progress-container">
-        <div class="progress-label">Mês</div>
+        <div class="progress-title">Mês</div>
         <div class="progress-bar-container">
             <div class="progress-bar" id="month-progress">0%</div>
         </div>
     </div>
     <div class="progress-container">
-        <div class="progress-label">Semana</div>
+        <div class="progress-title">Semana</div>
         <div class="progress-bar-container">
             <div class="progress-bar" id="week-progress">0%</div>
         </div>
     </div>
     <div class="progress-container">
-        <div class="progress-label">Dia</div>
+        <div class="progress-title">Dia</div>
         <div class="progress-bar-container">
             <div class="progress-bar" id="day-progress">0%</div>
         </div>
