--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         .progress-container {
             width: 100%;
             max-width: 300px;
-            margin: 20px auto;
+            margin: 15px auto; /* Menor espaçamento entre barras */
             background: #222;
-            padding: 10px;
+            padding: 8px;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
             display: flex;
@@ -30,14 +30,14 @@
         .progress-title {
             font-weight: bold;
             color: #ffffff;
-            margin-bottom: 10px;
+            margin-bottom: 6px; /* Menor espaçamento entre título e barra */
         }
 
         .progress-bar-container {
             width: 100%;
             background: #333;
             border-radius: 5px;
-            height: 18px;
+            height: 16px; /* Diminuí a altura das barras */
             overflow: hidden;
         }
 
@@ -48,8 +48,8 @@
             text-align: center;
             color: white;
             font-weight: bold;
-            font-size: 12px;
-            line-height: 18px;
+            font-size: 10px; /* Tamanho de fonte menor */
+            line-height: 16px;
             width: 0%;
         }
         
