--- a/index.html
+++ b/index.html
@@ -1,123 +1,126 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Life Progress</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Life Progress</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+<style>
+    body {
+        font-family: 'Poppins', sans-serif;
+        background: #f0f0f0; /* fundo cinza claro */
+        color: #000000;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 20px;
+    }
 
-    <!-- Fonte moderna -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    .progress-container {
+        width: 100%;
+        max-width: 320px;
+        margin: 12px 0;
+        padding: 10px 12px;
+        background: #e0e0e0; /* cinza claro do widget box */
+        border-radius: 12px;
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
 
-    <style>
-        body {
-            font-family: 'Poppins', sans-serif;
-            background: #0f0f0f;
-            color: #ffffff;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 20px;
-        }
+    .progress-title {
+        font-weight: 600;
+        margin-bottom: 4px;
+        font-size: 14px;
+        text-transform: capitalize; /* primeira letra maiúscula */
+        color: #333;
+    }
 
-        .progress-container {
-            width: 100%;
-            max-width: 320px;
-            margin: 12px 0;
-            padding: 10px 12px;
-            background: rgba(255, 255, 255, 0.05);
-            border-radius: 12px;
-            backdrop-filter: blur(6px);
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
-        }
+    .progress-bar-container {
+        width: 100%;
+        height: 8px; /* barra fina */
+        background: rgba(0, 0, 0, 0.05);
+        border-radius: 8px;
+        overflow: hidden;
+    }
 
-        .progress-title {
-            font-weight: 600;
-            margin-bottom: 4px;
-            font-size: 14px;
-            text-transform: uppercase;
-            opacity: 0.85;
-        }
+    .progress-bar {
+        height: 100%;
+        border-radius: 8px;
+        text-align: right;
+        padding-right: 6px;
+        font-size: 10px;
+        line-height: 8px;
+        font-weight: 600;
+        color: white;
+        width: 0%;
+        transition: width 1s ease-in-out;
+    }
 
-        .progress-bar-container {
-            width: 100%;
-            height: 14px;
-            background: rgba(255, 255, 255, 0.1);
-            border-radius: 8px;
-            overflow: hidden;
-        }
-
-        .progress-bar {
-            height: 100%;
-            border-radius: 8px;
-            text-align: right;
-            padding-right: 6px;
-            font-size: 10px;
-            line-height: 14px;
-            font-weight: 600;
-            color: white;
-            width: 0%;
-            transition: width 1s ease-in-out;
-            background: linear-gradient(90deg, #FF0080, #7928CA);
-        }
-    </style>
+    /* cores específicas para cada período */
+    #year-progress { background: #FF5F7E; }
+    #semester-progress { background: #FF9A5B; }
+    #quarter-progress { background: #FFD25B; }
+    #month-progress { background: #4CAF50; }
+    #week-progress { background: #2196F3; }
+    #day-progress { background: #9C27B0; }
+</style>
 </head>
 <body>
 
-    <div class="progress-container">
-        <div class="progress-title">Ano</div>
-        <div class="progress-bar-container"><div class="progress-bar" id="year-progress">0%</div></div>
-    </div>
-    <div class="progress-container">
-        <div class="progress-title">Semestre</div>
-        <div class="progress-bar-container"><div class="progress-bar" id="semester-progress">0%</div></div>
-    </div>
-    <div class="progress-container">
-        <div class="progress-title">Trimestre</div>
-        <div class="progress-bar-container"><div class="progress-bar" id="quarter-progress">0%</div></div>
-    </div>
-    <div class="progress-container">
-        <div class="progress-title">Mês</div>
-        <div class="progress-bar-container"><div class="progress-bar" id="month-progress">0%</div></div>
-    </div>
-    <div class="progress-container">
-        <div class="progress-title">Semana</div>
-        <div class="progress-bar-container"><div class="progress-bar" id="week-progress">0%</div></div>
-    </div>
-    <div class="progress-container">
-        <div class="progress-title">Dia</div>
-        <div class="progress-bar-container"><div class="progress-bar" id="day-progress">0%</div></div>
-    </div>
+<div class="progress-container">
+    <div class="progress-title">Ano</div>
+    <div class="progress-bar-container"><div class="progress-bar" id="year-progress">0%</div></div>
+</div>
+<div class="progress-container">
+    <div class="progress-title">Semestre</div>
+    <div class="progress-bar-container"><div class="progress-bar" id="semester-progress">0%</div></div>
+</div>
+<div class="progress-container">
+    <div class="progress-title">Trimestre</div>
+    <div class="progress-bar-container"><div class="progress-bar" id="quarter-progress">0%</div></div>
+</div>
+<div class="progress-container">
+    <div class="progress-title">Mês</div>
+    <div class="progress-bar-container"><div class="progress-bar" id="month-progress">0%</div></div>
+</div>
+<div class="progress-container">
+    <div class="progress-title">Semana</div>
+    <div class="progress-bar-container"><div class="progress-bar" id="week-progress">0%</div></div>
+</div>
+<div class="progress-container">
+    <div class="progress-title">Dia</div>
+    <div class="progress-bar-container"><div class="progress-bar" id="day-progress">0%</div></div>
+</div>
 
-    <script>
-        function updateProgress() {
-            const now = new Date();
-            const startOfYear = new Date(now.getFullYear(), 0, 1);
-            const startOfSemester = new Date(now.getFullYear(), now.getMonth() < 6 ? 0 : 6, 1);
-            const startOfQuarter = new Date(now.getFullYear(), Math.floor(now.getMonth() / 3) * 3, 1);
-            const startOfMonth = new Date(now.getFullYear(), now.getMonth(), 1);
-            const startOfWeek = new Date(now);
-            startOfWeek.setDate(now.getDate() - now.getDay());
-            const startOfDay = new Date(now.getFullYear(), now.getMonth(), now.getDate());
+<script>
+function updateProgress() {
+    const now = new Date();
+    const startOfYear = new Date(now.getFullYear(), 0, 1);
+    const startOfSemester = new Date(now.getFullYear(), now.getMonth() < 6 ? 0 : 6, 1);
+    const startOfQuarter = new Date(now.getFullYear(), Math.floor(now.getMonth() / 3) * 3, 1);
+    const startOfMonth = new Date(now.getFullYear(), now.getMonth(), 1);
+    const startOfWeek = new Date(now); startOfWeek.setDate(now.getDate() - now.getDay());
+    const startOfDay = new Date(now.getFullYear(), now.getMonth(), now.getDate());
 
-            function getProgress(start, end) {
-                return Math.round(((now - start) / (end - start)) * 100);
-            }
+    function getProgress(start, end) {
+        return Math.round(((now - start) / (end - start)) * 100);
+    }
 
-            function updateBar(id, progress) {
-                const bar = document.getElementById(id);
-                bar.style.width = progress + '%';
-                bar.textContent = progress + '%';
-            }
+    function updateBar(id, progress) {
+        const bar = document.getElementById(id);
+        bar.style.width = progress + '%';
+        bar.textContent = progress + '%';
+    }
 
-            updateBar("year-progress", getProgress(startOfYear, new Date(now.getFullYear() + 1, 0, 1)));
-            updateBar("semester-progress", getProgress(startOfSemester, new Date(startOfSemester.getFullYear(), startOfSemester.getMonth() + 6, 1)));
-            updateBar("quarter-progress", getProgress(startOfQuarter, new Date(startOfQuarter.getFullYear(), startOfQuarter.getMonth() + 3, 1)));
-            updateBar("month-progress", getProgress(startOfMonth, new Date(startOfMonth.getFullYear(), startOfMonth.getMonth() + 1, 1)));
-            updateBar("week-progress", getProgress(startOfWeek, new Date(startOfWeek.getFullYear(), startOfWeek.getMonth(), startOfWeek.getDate() + 7)));
-            updateBar("day-progress", getProgress(startOfDay, new Date(startOfDay.getFullYear(), startOfDay.getMonth(), startOfDay.getDate() + 1)));
-        }
+    updateBar("year-progress", getProgress(startOfYear, new Date(now.getFullYear() + 1, 0, 1)));
+    updateBar("semester-progress", getProgress(startOfSemester, new Date(startOfSemester.getFullYear(), startOfSemester.getMonth() + 6, 1)));
+    updateBar("quarter-progress", getProgress(startOfQuarter, new Date(startOfQuarter.getFullYear(), startOfQuarter.getMonth() + 3, 1)));
+    updateBar("month-progress", getProgress(startOfMonth, new Date(startOfMonth.getFullYear(), startOfMonth.getMonth() + 1, 1)));
+    updateBar("week-progress", getProgress(startOfWeek, new Date(startOfWeek.getFullYear(), startOfWeek.getMonth(), startOfWeek.getDate() + 7)));
+    updateBar("day-progress", getProgress(startOfDay, new Date(startOfDay.getFullYear(), startOfDay.getMonth(), startOfDay.getDate() + 1)));
+}
 
-        updateProgress();
-    </script>
+updateProgress();
+</script>
+
 </body>
 </html>
