--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     body {
         font-family: 'Poppins', sans-serif;
         background: #f0f0f0; /* fundo cinza claro */
-        color: #000000;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -20,24 +19,24 @@
         width: 100%;
         max-width: 320px;
         margin: 12px 0;
-        padding: 10px 12px;
-        background: #e0e0e0; /* cinza claro do widget box */
+        padding: 12px;
+        background: #e0e0e0; /* fundo cinza widget box */
         border-radius: 12px;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+        box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
     .progress-title {
         font-weight: 600;
-        margin-bottom: 4px;
+        margin-bottom: 6px;
         font-size: 14px;
-        text-transform: capitalize; /* primeira letra maiúscula */
         color: #333;
+        text-transform: capitalize; /* primeira letra maiúscula */
     }
 
     .progress-bar-container {
         width: 100%;
-        height: 8px; /* barra fina */
-        background: rgba(0, 0, 0, 0.05);
+        height: 12px; /* barra fina */
+        background: rgba(0,0,0,0.05);
         border-radius: 8px;
         overflow: hidden;
     }
@@ -48,20 +47,21 @@
         text-align: right;
         padding-right: 6px;
         font-size: 10px;
-        line-height: 8px;
+        line-height: 12px;
         font-weight: 600;
         color: white;
         width: 0%;
         transition: width 1s ease-in-out;
+        background: linear-gradient(90deg, #FF5F7E, #FF9A5B);
     }
 
-    /* cores específicas para cada período */
-    #year-progress { background: #FF5F7E; }
-    #semester-progress { background: #FF9A5B; }
-    #quarter-progress { background: #FFD25B; }
-    #month-progress { background: #4CAF50; }
-    #week-progress { background: #2196F3; }
-    #day-progress { background: #9C27B0; }
+    /* cores individuais para cada período */
+    #year-progress { background: linear-gradient(90deg, #FF5F7E, #FF9A5B); }
+    #semester-progress { background: linear-gradient(90deg, #FF9A5B, #FFD25B); }
+    #quarter-progress { background: linear-gradient(90deg, #FFD25B, #4CAF50); }
+    #month-progress { background: linear-gradient(90deg, #4CAF50, #2196F3); }
+    #week-progress { background: linear-gradient(90deg, #2196F3, #9C27B0); }
+    #day-progress { background: linear-gradient(90deg, #9C27B0, #FF5F7E); }
 </style>
 </head>
 <body>
@@ -98,7 +98,12 @@ function updateProgress() {
     const startOfSemester = new Date(now.getFullYear(), now.getMonth() < 6 ? 0 : 6, 1);
     const startOfQuarter = new Date(now.getFullYear(), Math.floor(now.getMonth() / 3) * 3, 1);
     const startOfMonth = new Date(now.getFullYear(), now.getMonth(), 1);
-    const startOfWeek = new Date(now); startOfWeek.setDate(now.getDate() - now.getDay());
+
+    // semana começa no domingo 00:00
+    const startOfWeek = new Date(now);
+    startOfWeek.setHours(0,0,0,0);
+    startOfWeek.setDate(now.getDate() - now.getDay()); // domingo
+
     const startOfDay = new Date(now.getFullYear(), now.getMonth(), now.getDate());
 
     function getProgress(start, end) {
@@ -111,15 +116,16 @@ function updateProgress() {
         bar.textContent = progress + '%';
     }
 
-    updateBar("year-progress", getProgress(startOfYear, new Date(now.getFullYear() + 1, 0, 1)));
-    updateBar("semester-progress", getProgress(startOfSemester, new Date(startOfSemester.getFullYear(), startOfSemester.getMonth() + 6, 1)));
-    updateBar("quarter-progress", getProgress(startOfQuarter, new Date(startOfQuarter.getFullYear(), startOfQuarter.getMonth() + 3, 1)));
-    updateBar("month-progress", getProgress(startOfMonth, new Date(startOfMonth.getFullYear(), startOfMonth.getMonth() + 1, 1)));
-    updateBar("week-progress", getProgress(startOfWeek, new Date(startOfWeek.getFullYear(), startOfWeek.getMonth(), startOfWeek.getDate() + 7)));
-    updateBar("day-progress", getProgress(startOfDay, new Date(startOfDay.getFullYear(), startOfDay.getMonth(), startOfDay.getDate() + 1)));
+    updateBar("year-progress", getProgress(startOfYear, new Date(now.getFullYear()+1,0,1)));
+    updateBar("semester-progress", getProgress(startOfSemester, new Date(startOfSemester.getFullYear(), startOfSemester.getMonth()+6,1)));
+    updateBar("quarter-progress", getProgress(startOfQuarter, new Date(startOfQuarter.getFullYear(), startOfQuarter.getMonth()+3,1)));
+    updateBar("month-progress", getProgress(startOfMonth, new Date(startOfMonth.getFullYear(), startOfMonth.getMonth()+1,1)));
+    updateBar("week-progress", getProgress(startOfWeek, new Date(startOfWeek.getFullYear(), startOfWeek.getMonth(), startOfWeek.getDate()+7)));
+    updateBar("day-progress", getProgress(startOfDay, new Date(startOfDay.getFullYear(), startOfDay.getMonth(), startOfDay.getDate()+1)));
 }
 
 updateProgress();
+setInterval(updateProgress, 60*1000); // atualiza a cada minuto
 </script>
 
 </body>
